--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/JessicaSousa/whyfake
 BugReports: https://github.com/JessicaSousa/whyfake/issues
+Suggests: 
+    covr
